--- a/components/home.twig
+++ b/components/home.twig
@@ -1,41 +1,53 @@
-<section id="home" class="home">
-  <div class="cit">
-    <p>
-      <em>
-        "Do what you love, and you will never have to work
-        <br />
-        a single day of your life"
-      </em>
-    </p>
-    <p>- Confucio</p>
+<section id="home" class="home hidden">
+  <nav>
+      <div class="nav-bar">
+          <ul>
+              <li><a href="#home" class="active">HOME</a></li>
+              <li><a href="#about">ABOUT_ME</a></li>
+              <li><a href="#works">WORKS</a></li>
+          </ul>
+      </div>
+  </nav>
+  <div class="web-dev"><h2>FRONT-END DEVELOPER</h2></div>
+  <div class="headband">
+    <div class="contact-title">Contact Me!</div>
+    {# <div class="contact">only if you need help or want to know more</div>
+    <div id="target" class="contact">otherwhise I'm napping</div> #}
+    <div class="icon">
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/yimeiwu_/"
+            ><i class="fi fi-brands-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://x.com/_onlymeiii_"
+            ><i class="fi fi-brands-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://github.com/yimei-wu"
+            ><i class="fi fi-brands-github"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/yimei-wu-657ab42b1/"
+            ><i class="fi fi-brands-linkedin"></i
+          ></a>
+        </li>
+        <li>
+          <a href="mailto:wuyimei60@gmail.com"
+            ><i class="fi fi-rr-envelope"></i
+          ></a>
+        </li>
+      </ul>
+    </div>
   </div>
-  <div class="icon">
-    <ul>
-      <li>
-        <a href="https://www.instagram.com/yimeiwu_/"
-          ><i class="fi fi-brands-instagram"></i
-        ></a>
-      </li>
-      <li>
-        <a href="https://x.com/_onlymeiii_"
-          ><i class="fi fi-brands-twitter"></i
-        ></a>
-      </li>
-      <li>
-        <a href="https://github.com/yimei-wu"
-          ><i class="fi fi-brands-github"></i
-        ></a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/yimei-wu-657ab42b1/"
-          ><i class="fi fi-brands-linkedin"></i
-        ></a>
-      </li>
-      <li>
-        <a href="mailto:wuyimei60@gmail.com"
-          ><i class="fi fi-rr-envelope"></i
-        ></a>
-      </li>
-    </ul>
-  </div>
+ 
+ 
+  <div class="frame f2"></div> 
+  <div class="frame f3"></div>
+  <div class="frame f4"></div>
+  <div class="frame f6"></div>
+  <div class="frame f7"></div>
 </section>
