--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -4,38 +4,157 @@
     width: 100vw;
     align-items: center;
     position: relative;
-    background-color: $bg-color;
     overflow: hidden;
+    .f2 {
+        top: 0;
+        right: 3%;
+        height: 20%;
+    }
+    .f3 {
+        bottom: 0;
+        right: 3%;
+        height: 20%;
+    }
+    .f4 {
+        bottom: 3%;
+        left: 0;
+        width: 100vw;
+    }
+    .f5 {
+        bottom: 0;
+        left: 3%;
+        height: 5%;
+    }
+    .f6 {
+        bottom: 0;
+        left: 3%;
+        height: 82%;
+    }
+    .f7 {
+        top: 0;
+        left: 3%;
+        height: 3.5%;
+    }
 }
-.cit {
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    transform: translateY(-50%);
+.web-dev {
+    position: fixed;
+    top: 35%;
+    left: 45%;
+    font-size: 4vw;
+    transform: translateX(-50%);
+    width: 50%;
+}
+.headband {
+    background-color: $transparent-color;
+    height: 200px;
+    width: 750px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    // padding-top: 3vh;
+}
+.contact-title {
+    font-size: 1.5rem;
+    margin-top: 3vh;
+    color: $bg-color;
+}
+.contact {
+    color: $transparent-color;
+    // font-family: 'Montserrat';
+}
+#target {
+    color: #B8BAC8;
+    margin-bottom: 3vh;
+}
+.contact .word:hover {
+    color: $transparent-text;
+    mix-blend-mode: difference;
 }
 .icon {
-    position: absolute;
-    bottom: 5%;
-    left: 4%;
+    // position: fixed;
+    // bottom: 5%;
+    // left: 3%;
     ul {
         display: flex;
-        gap: 35px;
+        gap: 7rem;
         li {
             list-style: none;
             a {
                 text-decoration: none;
-                color: $main-color-text;
-                &:hover {
-                    color: $hover;
-                }
+                color: $color-text;
+                cursor: none;
+                // &:hover {
+                //     color: $transparent-text;
+                // }
             }
             i {
-                font-size: 22px;
+                font-size: 32px;
             }
         }
     }
 }
-p {
-    margin-bottom: 10px;
-    font-size: 17px;
+
+
+// MEDIA QUERY
+
+@media (max-width: 750px) {
+    .headband {
+        height: 175px;
+        width: 100vw;
+        // justify-content: space-evenly;
+        // padding-bottom: 3vh;
+    }
+    .icon {
+        ul {
+            gap: 12vw;
+            li {
+                i {
+                    font-size: 28px;
+                }
+            }
+        }
+    }
+    .web-dev {
+        top: 40%;
+        left: 30%;
+        font-size: 3rem;
+    }
+    .home {
+        .f2 {
+            height: 5%;
+        }
+        .f3 {
+            height: 67%;
+        }
+    }
+}
+
+@media (max-width: 570px) {
+    .web-dev {
+        top: 30%;
+        left: 67%;
+        bottom: 4%;
+        writing-mode: vertical-rl;
+        font-size: 8vw;
+        transform: rotate(180deg);
+    }
+    .headband {
+        // background-color: $bg-color;
+        width: 20%;
+        height: 38%;
+        // padding: 5% 0;
+        .contact-title {
+            display: none;
+        }
+        .icon {
+            ul {
+                flex-direction: column;
+                gap: 2vh;
+            }
+        }
+    }
 }
