--- a/templates/page-homepage.twig
+++ b/templates/page-homepage.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
-{% include "home.twig" %}
+{# {% include "home.twig" %} #}
+{# {% include "about.twig" %} #}
+{% include "works.twig" %}
 
 {% endblock %}
