add link for each pages

--- a/components/home.twig
+++ b/components/home.twig
@@ -3,8 +3,8 @@
       <div class="nav-bar">
           <ul>
               <li><a href="#home" class="active">HOME</a></li>
-              <li><a href="#about">ABOUT_ME</a></li>
-              <li><a href="#works">WORKS</a></li>
+              <li><a href="http://yimei-wu.local/about/">ABOUT_ME</a></li>
+              <li><a href="http://yimei-wu.local/works/">WORKS</a></li>
           </ul>
       </div>
   </nav>
