--- a/components/about.twig
+++ b/components/about.twig
@@ -2,9 +2,9 @@
     <nav>
         <div class="nav-bar">
             <ul>
-                <li><a href="#home">HOME</a></li>
+                <li><a href="http://yimei-wu.local/">HOME</a></li>
                 <li><a href="#about" class="active">ABOUT_ME</a></li>
-                <li><a href="#works">WORKS</a></li>
+                <li><a href="http://yimei-wu.local/works/">WORKS</a></li>
             </ul>
         </div>
     </nav>
