add projects to works page

--- a/templates/page-works.twig
+++ b/templates/page-works.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
-{% include "works.twig" %}
+{% for work in works %}
+   {% include "works.twig" %}
+{% endfor %}
 
 {% endblock %}
