--- a/scss/_works.scss
+++ b/scss/_works.scss
@@ -8,19 +8,19 @@
         height: 20%;
     }
     .f3 {
-        bottom: 45px;
+        bottom: 0px;
         right: 3%;
-        height: 15%;
+        height: 21%;
     }
     .f4 {
         bottom: 3%;
-        right: 0;
-        width: 92vw;
+        left: 0;
+        width: 100vw;
     }
     .f6 {
         bottom: 0;
         left: 3%;
-        height: 3%;
+        height: 4%;
     }
     .f7 {
         top: calc(4% + 96px);
@@ -34,7 +34,7 @@
     }
 }
 .project-info {
-    position: absolute;
+    position: fixed;
     top: 7%;
     left: 50%;
     width: 50%;
@@ -54,24 +54,21 @@
 }
 
 .cover-project {
-    position: absolute;
-    bottom: 14%;
-    right: 50%;
+    position: fixed;
+    bottom: 10%;
+    right: 51%;
     transform: translateX(50%);
-    width: 50%;
+    width: 60%;
     height: 60%;
-    background-image: url('{{ theme.link }}/src/Cover.png') center center;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 .cover-project img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .project-number {
-    position: absolute;
+    position: fixed;
     bottom: 5%;
     left: 2%;
     font-size: 50px;
@@ -79,7 +76,7 @@
     text-orientation: sideways;
 }
 .box-color {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     width: 65%;
@@ -91,51 +88,23 @@
         background-color: $color-text;
         color: $bg-color;
         border: none;
-        position: absolute;
+        position: fixed;
         bottom: 0;
         right: 0;
+        a {
+            text-decoration: none;
+            color: $bg-color;
+        }
     }
 }
 
 // MEDIA QUERY
-@media (max-width: 1450px) {
-    .cover-project {
-        height: 55%;
-        bottom: 17%;
-    }
-}
-
-@media (max-width: 1300px) {
-    .cover-project {
-        height: 50%;
-        bottom: 22%;
-    }
-}
-
-@media (max-width: 1200px) {
-    .cover-project {
-        height: 45%;
-        bottom: 25%;
-    }
-}
-
-@media (max-width: 1090px) {
-    .cover-project {
-        height: 50%;
-        width: 60%;
-        bottom: 18%;
-        right: 58%;
-    }
-}
-
-@media (max-width: 950px) {
-    .cover-project {
-        height: 45%;
-        width: 58%;
-        bottom: 18%;
-        right: 60%;
-    }
-}
+// @media (max-width: 1250px) {
+//     .cover-project {
+//         height: 45%;
+//         bottom: 25%;
+//     }
+// }
 
 @media (max-width: 750px) {
     .project-info {
