--- a/scss/styles.css
+++ b/scss/styles.css
@@ -315,14 +315,14 @@
   width: 700px;
   height: 25vh;
   background-color: #a0a4b8;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 3%;
   transform: translateY(-50%);
 }
 
 .info {
-  position: absolute;
+  position: fixed;
   bottom: 10%;
   left: 3%;
   width: 70vw;
@@ -348,7 +348,7 @@
     width: 94vw;
     height: 25vh;
     background-color: #a0a4b8;
-    position: absolute;
+    position: fixed;
     top: 45%;
     left: 3%;
     transform: translateY(-50%);
@@ -371,19 +371,19 @@
   height: 20%;
 }
 .works .f3 {
-  bottom: 45px;
+  bottom: 0px;
   right: 3%;
-  height: 15%;
+  height: 21%;
 }
 .works .f4 {
   bottom: 3%;
-  right: 0;
-  width: 92vw;
+  left: 0;
+  width: 100vw;
 }
 .works .f6 {
   bottom: 0;
   left: 3%;
-  height: 3%;
+  height: 4%;
 }
 .works .f7 {
   top: calc(4% + 96px);
@@ -397,7 +397,7 @@
 }
 
 .project-info {
-  position: absolute;
+  position: fixed;
   top: 7%;
   left: 50%;
   width: 50%;
@@ -417,26 +417,23 @@
 }
 
 .cover-project {
-  position: absolute;
-  bottom: 14%;
-  right: 50%;
+  position: fixed;
+  bottom: 10%;
+  right: 51%;
   transform: translateX(50%);
-  width: 50%;
+  width: 60%;
   height: 60%;
-  background-image: url("{{ theme.link }}/src/Cover.png") center center;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .cover-project img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .project-number {
-  position: absolute;
+  position: fixed;
   bottom: 5%;
   left: 2%;
   font-size: 50px;
@@ -445,7 +442,7 @@
 }
 
 .box-color {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
   width: 65%;
@@ -458,45 +455,15 @@
   background-color: #242222;
   color: #efefef;
   border: none;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
 }
+.box-color button a {
+  text-decoration: none;
+  color: #efefef;
+}
 
-@media (max-width: 1450px) {
-  .cover-project {
-    height: 55%;
-    bottom: 17%;
-  }
-}
-@media (max-width: 1300px) {
-  .cover-project {
-    height: 50%;
-    bottom: 22%;
-  }
-}
-@media (max-width: 1200px) {
-  .cover-project {
-    height: 45%;
-    bottom: 25%;
-  }
-}
-@media (max-width: 1090px) {
-  .cover-project {
-    height: 50%;
-    width: 60%;
-    bottom: 18%;
-    right: 58%;
-  }
-}
-@media (max-width: 950px) {
-  .cover-project {
-    height: 45%;
-    width: 58%;
-    bottom: 18%;
-    right: 60%;
-  }
-}
 @media (max-width: 750px) {
   .project-info h4 {
     grid-column-start: 2;
