--- a/components/about.twig
+++ b/components/about.twig
@@ -1,5 +1,5 @@
 <section id="about" class="about hidden">
-    <nav>
+    {# <nav>
         <div class="nav-bar">
             <ul>
                 <li><a href="http://yimei-wu.local/">HOME</a></li>
@@ -7,7 +7,7 @@
                 <li><a href="http://yimei-wu.local/works/">WORKS</a></li>
             </ul>
         </div>
-    </nav>
+    </nav> #}
     <div class="image"></div>
     <div class="info">
         <h2>BEHIND THE SCENES</h2>
