--- a/components/home.twig
+++ b/components/home.twig
@@ -1,5 +1,5 @@
 <section id="home" class="home hidden">
-  <nav>
+  {# <nav>
       <div class="nav-bar">
           <ul>
               <li><a href="#home" class="active">HOME</a></li>
@@ -7,7 +7,7 @@
               <li><a href="http://yimei-wu.local/works/">WORKS</a></li>
           </ul>
       </div>
-  </nav>
+  </nav> #}
   <div class="web-dev"><h2>FRONT-END DEVELOPER</h2></div>
   <div class="headband">
     <div class="contact-title">Contact Me!</div>
