--- a/components/works.twig
+++ b/components/works.twig
@@ -1,12 +1,12 @@
 <section id="works" class="works hidden">
    <nav>
-      <div class="nav-bar">
+      {# <div class="nav-bar">
           <ul>
               <li><a href="http://yimei-wu.local/">HOME</a></li>
               <li><a href="http://yimei-wu.local/about/">ABOUT_ME</a></li>
               <li><a href="#works" class="active">WORKS</a></li>
           </ul>
-      </div>
+      </div> #}
   </nav>
  {% include "single-work.twig" %}
  <div class="box-color">
