--- a/templates/base.twig
+++ b/templates/base.twig
@@ -6,51 +6,53 @@
               content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
         <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
-        <link
-        href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css"
-        rel="stylesheet"
-        />
-        <link
-        href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css"
-        rel="stylesheet"
-        />
-        <link href="{{ theme.link }}/scss/styles.css" rel="stylesheet"/>
-    
+        <link href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css"
+              rel="stylesheet" />
+        <link href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css"
+              rel="stylesheet" />
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <link href="{{ theme.link }}/scss/styles.css"
+              rel="stylesheet" />
         {{ function("wp_head") }}
     </head>
     <body class="{{ body_class }}"
           data-template="base.twig">
         {{ function("wp_body_open") }}
         <main>
-        <div
-            id="custom-cursor"
-            class="cursor"
-        ></div>
-        {# <svg id="drawingArea" width="48" height="48" style="border:1px solid #000;">
+            <div id="custom-cursor"
+                 class="cursor"></div>
+            {# <svg id="drawingArea" width="48" height="48" style="border:1px solid #000;">
             <g id="lines"></g>
         </svg> #}
             <h1>
-                <a href="#home"
-                ><svg class="logo" width="112" height="92" viewBox="0 0 112 92" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M6.33333 1H1L27.4012 74.3333L29.4012 68.3333L6.33333 1Z" fill="#242222"/>
-                <path d="M73.6667 73L59.6667 33L57 40.3333L76.3333 91H77.6667L111 1H97.6667L73.6667 73Z" fill="#242222"/>
-                <path d="M6.33333 1H1L27.4012 74.3333L29.4012 68.3333L6.33333 1Z" stroke="#242222" stroke-width="0.5" stroke-linecap="round"/>
-                <path d="M73.6667 73L59.6667 33L57 40.3333L76.3333 91H77.6667L111 1H97.6667L73.6667 73Z" stroke="#242222" stroke-width="0.5" stroke-linecap="round"/>
-                <path d="M48.0951 21L29 78.5478L33.4982 91H34.8252L58.0476 27.6667L68 1H54.7301L50.7491 13L49.4221 17L48.0951 21Z" fill="#A0A4B8"/>
-                <path d="M45.5789 1H39L46.3684 17L49 9L45.5789 1Z" fill="#A0A4B8"/>
-                </svg>
+                <a href="#home">
+                    <svg class="logo"
+                         width="112"
+                         height="92"
+                         viewBox="0 0 112 92"
+                         fill="none"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.33333 1H1L27.4012 74.3333L29.4012 68.3333L6.33333 1Z" fill="#242222" />
+                        <path d="M73.6667 73L59.6667 33L57 40.3333L76.3333 91H77.6667L111 1H97.6667L73.6667 73Z" fill="#242222" />
+                        <path d="M6.33333 1H1L27.4012 74.3333L29.4012 68.3333L6.33333 1Z" stroke="#242222" stroke-width="0.5" stroke-linecap="round" />
+                        <path d="M73.6667 73L59.6667 33L57 40.3333L76.3333 91H77.6667L111 1H97.6667L73.6667 73Z" stroke="#242222" stroke-width="0.5" stroke-linecap="round" />
+                        <path d="M48.0951 21L29 78.5478L33.4982 91H34.8252L58.0476 27.6667L68 1H54.7301L50.7491 13L49.4221 17L48.0951 21Z" fill="#A0A4B8" />
+                        <path d="M45.5789 1H39L46.3684 17L49 9L45.5789 1Z" fill="#A0A4B8" />
+                    </svg>
                 </a>
             </h1>
             <nav>
                 <div class="nav-bar">
                     <ul>
                         {% for item in menu.items %}
-                        <li>
-                            <a class="{{ item.classes | join(" ") }}" target="{{ item.target }}"
-                                href="{{ item.link }}">{{ item.title }}</a>
-                        </li>                            
+                            <li>
+                                <a class="{{ item.classes | join(" ") }}"
+                                   target="{{ item.target }}"
+                                   href="{{ item.link }}">{{ item.title }}</a>
+                            </li>
                         {% endfor %}
-
                     </ul>
                 </div>
             </nav>
