--- a/templates/page-works.twig
+++ b/templates/page-works.twig
@@ -1,9 +1,31 @@
 {% extends "base.twig" %}
-
 {% block content %}
-
-{% for work in works %}
-   {% include "works.twig" %}
-{% endfor %}
-
+   <section id="projects">
+      <div class="swiper">
+         <div class="swiper-wrapper">
+            {% for work in works %}
+               <a href="{{ work.link }}"
+                  class="swiper-slide">
+                  <div class="">
+                     <h2>{{ work.title }}</h2>
+                     <h4>{{ work.year }}</h4>
+                     <p>{{ work.description }}</p>
+                  </div>
+                  <img src="{{ work.poster }}">
+                  <div class="">{{ work.numeration }}</div>
+               </a>
+            {% endfor %}
+         </div>
+      </div>
+      <button class="custom-next-button">NEXT</button>
+      <button class="custom-prev-button">PREV</button>
+   </section>
+   <div class="works">
+      <div class="frame f2"></div>
+      <div class="frame f3"></div>
+      <div class="frame f4"></div>
+      <div class="frame f6"></div>
+      <div class="frame f7"></div>
+      <div class="frame f8"></div>
+   </div>
 {% endblock %}
