--- a/templates/single-work.twig
+++ b/templates/single-work.twig
@@ -1,19 +1,7 @@
-{# {% extends "base.twig" %} #}
-
-{% block content %}   
-
- {% for work in works %}
-   <div class="project">
-         <div class="project-info">
-            <h2>{{ work.title }}</h2>
-            <h4>{{ work.year }}</h4>
-            <p>{{ work.description }}</p>
-         </div>
-         <div class="cover-project">
-            <img src="{{ work.poster }}">
-         </div>
-         <div class="project-number">{{ work.numeration }}</div>
-   </div>
-{% endfor %}
-
+{% extends "base.twig" %}
+{% block content %}
+   {# TODO  #}
+   <h1>Template visualizzazione progetto singolo</h1>
+   <h1>{{ post.title }}</h1>
+   <div>{{ post.description }}</div>
 {% endblock %}
