--- a/scss/_works.scss
+++ b/scss/_works.scss
@@ -36,12 +36,13 @@
 .project-info {
   position: fixed;
   top: 7%;
-  left: 50%;
-  width: 50%;
-  transform: translate(-50%);
+  // left: 50%;
+  // width: 50%;
+  // transform: translate(-50%);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
+  color: $color-text;
   h4 {
     grid-column-start: 1;
   }
@@ -53,15 +54,15 @@
   }
 }
 
-.cover-project {
+.cover {
   position: fixed;
   bottom: 10%;
-  right: 51%;
+  right: 50%;
   transform: translateX(50%);
-  width: 60%;
+  width: 100%;
   height: 60%;
 }
-.cover-project img {
+.cover img {
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -74,6 +75,7 @@
   font-size: 50px;
   writing-mode: vertical-lr;
   text-orientation: sideways;
+  color: $color-text;
 }
 .box-color {
   position: fixed;
@@ -82,6 +84,7 @@
   width: 65%;
   height: 23%;
   background-color: $transparent-color;
+  z-index: 20;
   button {
     width: 7vw;
     height: 5vh;
@@ -89,13 +92,21 @@
     color: $bg-color;
     border: none;
     position: fixed;
+    z-index: 50;
+  }
+  .custom-next-button {
     bottom: 0;
     right: 0;
-    a {
-      text-decoration: none;
-      color: $bg-color;
-    }
+    border-left: 1px solid $transparent-color;
   }
+  .custom-prev-button {
+    bottom: 0;
+    right: 7vw;
+  }
+}
+
+.swiper-slide {
+  width: 100vw;
 }
 
 // MEDIA QUERY
