--- a/scss/styles.css
+++ b/scss/styles.css
@@ -399,12 +399,10 @@
 .project-info {
   position: fixed;
   top: 7%;
-  left: 50%;
-  width: 50%;
-  transform: translate(-50%);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
+  color: #242222;
 }
 .project-info h4 {
   grid-column-start: 1;
@@ -416,16 +414,16 @@
   grid-column-end: 4;
 }
 
-.cover-project {
+.cover {
   position: fixed;
   bottom: 10%;
-  right: 51%;
+  right: 50%;
   transform: translateX(50%);
-  width: 60%;
+  width: 100%;
   height: 60%;
 }
 
-.cover-project img {
+.cover img {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
@@ -439,6 +437,7 @@
   font-size: 50px;
   writing-mode: vertical-lr;
   text-orientation: sideways;
+  color: #242222;
 }
 
 .box-color {
@@ -448,6 +447,7 @@
   width: 65%;
   height: 23%;
   background-color: rgba(160, 164, 184, 0.7019607843);
+  z-index: 20;
 }
 .box-color button {
   width: 7vw;
@@ -456,12 +456,20 @@
   color: #efefef;
   border: none;
   position: fixed;
+  z-index: 50;
+}
+.box-color .custom-next-button {
   bottom: 0;
   right: 0;
+  border-left: 1px solid rgba(160, 164, 184, 0.7019607843);
 }
-.box-color button a {
-  text-decoration: none;
-  color: #efefef;
+.box-color .custom-prev-button {
+  bottom: 0;
+  right: 7vw;
+}
+
+.swiper-slide {
+  width: 100vw;
 }
 
 @media (max-width: 750px) {
@@ -579,6 +587,8 @@ body {
 #projects {
   display: flex;
   flex-direction: column;
+  height: 100svh;
+  width: 100vw;
 }
 
 .swiper {
@@ -591,26 +601,4 @@ body {
   aspect-ratio: 16/9;
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.custom-next-button {
-  position: fixed;
-  background: red;
-  width: 200px;
-  height: 200px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1000;
-}
-
-.custom-prev-button {
-  position: fixed;
-  background: blue;
-  width: 200px;
-  height: 200px;
-  top: 50%;
-  left: 40%;
-  transform: translate(-40%, -50%);
-  z-index: 1000;
 }/*# sourceMappingURL=styles.css.map */
