--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -118,6 +118,8 @@ body {
 #projects {
   display: flex;
   flex-direction: column;
+  height: 100svh;
+  width: 100vw;
 }
 
 // Carousel
@@ -132,26 +134,4 @@ body {
     aspect-ratio: 16/9;
     object-fit: cover;
   }
-}
-
-.custom-next-button {
-  position: fixed;
-  background: red;
-  width: 200px;
-  height: 200px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1000;
-}
-
-.custom-prev-button {
-  position: fixed;
-  background: blue;
-  width: 200px;
-  height: 200px;
-  top: 50%;
-  left: 40%;
-  transform: translate(-40%, -50%);
-  z-index: 1000;
-}
+} 
