--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -170,7 +170,7 @@ $transparent-color: #a0a4b8b3;
 
 @font-face {
   font-family: "Audiowide";
-  src: url("Audiowide-Regular.woff") format("woff");
+  src: url("../font/transfonter.org-audiowide/Audiowide-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
