--- a/scss/styles.css
+++ b/scss/styles.css
@@ -126,7 +126,7 @@
 }
 @font-face {
   font-family: "Audiowide";
-  src: url("Audiowide-Regular.woff") format("woff");
+  src: url("../font/transfonter.org-audiowide/Audiowide-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
